# tes3-mods

./: .gitignore  README.md  create_mods.ps1  publish.bat  updateZipPlusPlus.bat
AlwaysFirstEquip/: config.lua  main.lua
CompareTooltip/: common.lua  config.lua  main.lua  mcm.lua  module_ashfall.lua  module_uiexpansion.lua
Flin/: Flin.ESP.esp  Nexus.bb  README.bbcode  README.md  _create_esp.bat  _update_yaml.bat  create_links.bat  create_mod.ps1  flin-metadata.toml  flin.ESP  flin.ESP.yaml
Ideas/: Thoughts.md
Immersive Bosmer Corpse Disposal/: create_mod.ps1
Immersive Maps/: create_esps.bat  create_mod.ps1  deploy.bat  immersive_maps-metadata.toml  immersive_maps_compass.esp  immersive_maps_compass.yaml  immersive_maps_gridmap.esp  immersive_maps_gridmap.yaml  immersive_maps_mel.esp  immersive_maps_mel.yaml
Immersive Travel/: Akamora_Sailen.json  Hla Oad_Seyda Neen.json  Necrom, Waterfront_Enamor Dayn.json  README.md  create_links.bat  create_mod.ps1  editor.md  immersivetravel.esp  travel_routes.xcf  vehicles.md
Immersive Travel Addon - World/: README.md  create_links.bat  create_mod.ps1  immersivetraveladdonworld-metadata.toml
Immersive Vehicles/: README.md  create_links.bat  create_mod.ps1  immersivetravel.esp  immersivevehicles-metadata.toml
ImmersiveBosmerDisposal/: config.lua  main.lua
ImmersiveMaps/: main.lua
ImmersiveRottenCorpses/: main.lua
LoadingSplashScreens/: config.lua  main.lua
Lockpick Minigame/: create_links.bat  create_mod.ps1
MWSE Audiobooks/: create_links.bat  create_mod.ps1  mwse_audiobooks-metadata.toml
MWSE Compare Tooltips/: create_mod.ps1
MWSE Loading Splash Screens/: create_mod.ps1
MagicSynergies/: README.md  create_links.bat  create_mod.ps1
mwscript/: .gitignore  Cargo.toml
mwscript/Ashlander Crafting/MiscItem/: a_msc_tanner_knife.mwscript
mwscript/src/: lib.rs  main.rs
mwscript/tests/: integration_tests.rs  unit_tests.rs
mwscript/tests/assets/: Ashlander Crafting.ESP
omw-util/: .gitignore  Cargo.toml
omw-util/src/: lib.rs  main.rs
omw-util/tests/: integration.rs  unit.rs
omw-util/tests/assets/: Morrowind.ini  openmw.cfg  openmw_full.cfg  openmw_out.cfg
omwmm/: .gitignore  Cargo.toml  LICENSE  README.md
omwmm/assets/: sw.js
omwmm/src/: app.rs  appui.rs  lib.rs  main.rs  views.rs
omwmm/src/views/: main_view.rs  menu_bar_view.rs  right_side_view.rs
(+554 files in other folders)
