[package]
name = "mwscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tes3 = { git = "https://github.com/rfuzzo/tes3.git", branch = "update/rf" }
clap = { version = "4",  features = ["derive"] }
serde_yaml = "0.9"
toml = "0.7"
serde_json = "1.0"

[dependencies.tes3]
#git = "https://github.com/Greatness7/tes3"
path = "E:/GitHub/tes3conv/libs/tes3"
default-features = false
features = ["esp"]