[package]
name = "omw-util"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
simple_logger = "4.1"
dirs = "5.0"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }

# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1.3"
