[package]
name = "omwmm"
version = "0.1.0"
authors = ["Moritz Baron  <r.fuzzo@gmail.com>"]
edition = "2021"
rust-version = "1.69"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui-notify = "0.6"
rfd = { version = "0.11.0", features = ["file-handle-inner"] }
serde = { version = "1", features = ["derive"] }
catppuccin-egui = "2.0"
tracing-subscriber = "0.3"
dirs = "5.0"
log = "0.4"
simple_logger = "4.1"
open = "4.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
